[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/DragonSLair.gd" type="Script" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Dragon.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/protagonist.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/music/stage3.ogg" type="AudioStream" id=5]

[node name="DragonSLair" type="Node2D"]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]
editor/display_folded = true

[node name="TileMap" parent="Navigation2D" instance=ExtResource( 2 )]
collision_layer = 4
tile_data = PoolIntArray( 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 6, 0, 65556, 6, 0, 131079, 6, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 6, 0, 196614, 6, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 6, 0, 262149, 6, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 6, 0, 327685, 6, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 0, 0, 327696, 3, 0, 327697, 0, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 6, 0, 393220, 6, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 0, 0, 393232, 3, 0, 393233, 3, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 6, 0, 458756, 6, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 0, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 0, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 6, 0, 524292, 6, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 0, 0, 524308, 0, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 6, 0, 589828, 6, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 3, 0, 589833, 0, 0, 589834, 3, 0, 589835, 3, 0, 589836, 0, 0, 589837, 0, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 0, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 3, 0, 589848, 6, 0, 655364, 6, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 3, 0, 655369, 0, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 0, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 6, 0, 720901, 6, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 0, 0, 720906, 3, 0, 720907, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 6, 0, 786437, 6, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 0, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 0, 0, 786448, 0, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 6, 0, 851974, 6, 0, 851975, 3, 0, 851976, 3, 0, 851977, 0, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 6, 0, 917511, 6, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 6, 0, 983048, 6, 0, 983049, 6, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 6, 0, 983060, 6, 0, 1048586, 6, 0, 1048587, 6, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 6, 0, 1048594, 6, 0, 1114123, 6, 0, 1114124, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1114127, 3, 0, 1114128, 3, 0, 1114129, 6, 0, 1179659, 6, 0, 1179660, 3, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 6, 0, 1245195, 6, 0, 1245196, 3, 0, 1245197, 3, 0, 1245198, 3, 0, 1245199, 3, 0, 1245200, 3, 0, 1245201, 6, 0, 1245212, 6, 0, 1245213, 6, 0, 1245214, 6, 0, 1245215, 6, 0, 1245216, 6, 0, 1245217, 6, 0, 1245218, 6, 0, 1310731, 6, 0, 1310732, 3, 0, 1310733, 3, 0, 1310734, 3, 0, 1310735, 3, 0, 1310736, 3, 0, 1310737, 6, 0, 1310738, 6, 0, 1310739, 6, 0, 1310740, 6, 0, 1310748, 6, 0, 1310749, 3, 0, 1310750, 3, 0, 1310751, 3, 0, 1310752, 3, 0, 1310753, 3, 0, 1310754, 6, 0, 1376267, 6, 0, 1376268, 3, 0, 1376269, 3, 0, 1376270, 0, 0, 1376271, 3, 0, 1376272, 3, 0, 1376273, 3, 0, 1376274, 3, 0, 1376275, 3, 0, 1376276, 6, 0, 1376284, 6, 0, 1376285, 3, 0, 1376286, 3, 0, 1376287, 0, 0, 1376288, 3, 0, 1376289, 3, 0, 1376290, 6, 0, 1441803, 6, 0, 1441804, 3, 0, 1441805, 3, 0, 1441806, 0, 0, 1441807, 3, 0, 1441808, 0, 0, 1441809, 3, 0, 1441810, 3, 0, 1441811, 3, 0, 1441812, 6, 0, 1441820, 6, 0, 1441821, 3, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 3, 0, 1441825, 3, 0, 1441826, 6, 0, 1507339, 6, 0, 1507340, 3, 0, 1507341, 3, 0, 1507342, 0, 0, 1507343, 3, 0, 1507344, 3, 0, 1507345, 3, 0, 1507346, 3, 0, 1507347, 3, 0, 1507348, 6, 0, 1507356, 6, 0, 1507357, 3, 0, 1507358, 0, 0, 1507359, 3, 0, 1507360, 3, 0, 1507361, 3, 0, 1507362, 6, 0, 1572875, 6, 0, 1572876, 3, 0, 1572877, 3, 0, 1572878, 3, 0, 1572879, 3, 0, 1572880, 3, 0, 1572881, 6, 0, 1572882, 6, 0, 1572883, 6, 0, 1572884, 6, 0, 1572892, 6, 0, 1572893, 3, 0, 1572894, 0, 0, 1572895, 0, 0, 1572896, 3, 0, 1572897, 3, 0, 1572898, 6, 0, 1638411, 6, 0, 1638412, 3, 0, 1638413, 3, 0, 1638414, 3, 0, 1638415, 3, 0, 1638416, 3, 0, 1638417, 6, 0, 1638428, 6, 0, 1638429, 3, 0, 1638430, 0, 0, 1638431, 0, 0, 1638432, 3, 0, 1638433, 3, 0, 1638434, 6, 0, 1703947, 6, 0, 1703948, 3, 0, 1703949, 3, 0, 1703950, 3, 0, 1703951, 3, 0, 1703952, 3, 0, 1703953, 6, 0, 1703964, 6, 0, 1703965, 3, 0, 1703966, 0, 0, 1703967, 0, 0, 1703968, 0, 0, 1703969, 3, 0, 1703970, 6, 0, 1769483, 6, 0, 1769484, 3, 0, 1769485, 3, 0, 1769486, 3, 0, 1769487, 3, 0, 1769488, 3, 0, 1769489, 6, 0, 1769500, 6, 0, 1769501, 3, 0, 1769502, 3, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 3, 0, 1769506, 6, 0, 1835019, 6, 0, 1835020, 3, 0, 1835021, 3, 0, 1835022, 3, 0, 1835023, 3, 0, 1835024, 3, 0, 1835025, 6, 0, 1835036, 6, 0, 1835037, 3, 0, 1835038, 3, 0, 1835039, 0, 0, 1835040, 0, 0, 1835041, 3, 0, 1835042, 6, 0, 1900555, 6, 0, 1900556, 3, 0, 1900557, 3, 0, 1900558, 0, 0, 1900559, 0, 0, 1900560, 3, 0, 1900561, 6, 0, 1900562, 6, 0, 1900563, 6, 0, 1900564, 6, 0, 1900572, 6, 0, 1900573, 3, 0, 1900574, 0, 0, 1900575, 0, 0, 1900576, 3, 0, 1900577, 3, 0, 1900578, 6, 0, 1966091, 6, 0, 1966092, 3, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 3, 0, 1966097, 3, 0, 1966098, 3, 0, 1966099, 3, 0, 1966100, 6, 0, 1966108, 6, 0, 1966109, 3, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 3, 0, 1966113, 3, 0, 1966114, 6, 0, 2031627, 6, 0, 2031628, 3, 0, 2031629, 0, 0, 2031630, 3, 0, 2031631, 3, 0, 2031632, 3, 0, 2031633, 3, 0, 2031634, 3, 0, 2031635, 3, 0, 2031636, 6, 0, 2031644, 6, 0, 2031645, 3, 0, 2031646, 0, 0, 2031647, 3, 0, 2031648, 3, 0, 2031649, 3, 0, 2031650, 6, 0, 2097163, 6, 0, 2097164, 3, 0, 2097165, 3, 0, 2097166, 3, 0, 2097167, 3, 0, 2097168, 3, 0, 2097169, 0, 0, 2097170, 3, 0, 2097171, 3, 0, 2097172, 6, 0, 2097180, 6, 0, 2097181, 3, 0, 2097182, 0, 0, 2097183, 3, 0, 2097184, 3, 0, 2097185, 3, 0, 2097186, 6, 0, 2162699, 6, 0, 2162700, 3, 0, 2162701, 3, 0, 2162702, 3, 0, 2162703, 3, 0, 2162704, 3, 0, 2162705, 6, 0, 2162706, 6, 0, 2162707, 6, 0, 2162708, 6, 0, 2162716, 6, 0, 2162717, 3, 0, 2162718, 0, 0, 2162719, 3, 0, 2162720, 3, 0, 2162721, 3, 0, 2162722, 6, 0, 2228235, 6, 0, 2228236, 3, 0, 2228237, 3, 0, 2228238, 3, 0, 2228239, 3, 0, 2228240, 3, 0, 2228241, 6, 0, 2228252, 6, 0, 2228253, 3, 0, 2228254, 3, 0, 2228255, 3, 0, 2228256, 3, 0, 2228257, 3, 0, 2228258, 6, 0, 2293771, 6, 0, 2293772, 3, 0, 2293773, 3, 0, 2293774, 3, 0, 2293775, 3, 0, 2293776, 3, 0, 2293777, 6, 0, 2293788, 6, 0, 2293789, 3, 0, 2293790, 3, 0, 2293791, 3, 0, 2293792, 3, 0, 2293793, 3, 0, 2293794, 6, 0, 2359307, 6, 0, 2359308, 3, 0, 2359309, 3, 0, 2359310, 3, 0, 2359311, 3, 0, 2359312, 3, 0, 2359313, 6, 0, 2359324, 6, 0, 2359325, 3, 0, 2359326, 3, 0, 2359327, 0, 0, 2359328, 3, 0, 2359329, 3, 0, 2359330, 6, 0, 2424843, 6, 0, 2424844, 3, 0, 2424845, 3, 0, 2424846, 0, 0, 2424847, 3, 0, 2424848, 3, 0, 2424849, 6, 0, 2424850, 6, 0, 2424851, 6, 0, 2424852, 6, 0, 2424853, 6, 0, 2424854, 6, 0, 2424855, 6, 0, 2424856, 6, 0, 2424857, 6, 0, 2424858, 6, 0, 2424859, 6, 0, 2424860, 6, 0, 2424861, 3, 0, 2424862, 3, 0, 2424863, 0, 0, 2424864, 3, 0, 2424865, 3, 0, 2424866, 6, 0, 2490379, 6, 0, 2490380, 3, 0, 2490381, 3, 0, 2490382, 0, 0, 2490383, 3, 0, 2490384, 3, 0, 2490385, 3, 0, 2490386, 3, 0, 2490387, 3, 0, 2490388, 3, 0, 2490389, 3, 0, 2490390, 3, 0, 2490391, 3, 0, 2490392, 3, 0, 2490393, 3, 0, 2490394, 3, 0, 2490395, 3, 0, 2490396, 3, 0, 2490397, 3, 0, 2490398, 3, 0, 2490399, 0, 0, 2490400, 3, 0, 2490401, 3, 0, 2490402, 6, 0, 2555915, 6, 0, 2555916, 3, 0, 2555917, 3, 0, 2555918, 3, 0, 2555919, 3, 0, 2555920, 3, 0, 2555921, 3, 0, 2555922, 3, 0, 2555923, 3, 0, 2555924, 3, 0, 2555925, 3, 0, 2555926, 3, 0, 2555927, 3, 0, 2555928, 3, 0, 2555929, 3, 0, 2555930, 3, 0, 2555931, 3, 0, 2555932, 3, 0, 2555933, 3, 0, 2555934, 3, 0, 2555935, 0, 0, 2555936, 3, 0, 2555937, 3, 0, 2555938, 6, 0, 2621451, 6, 0, 2621452, 3, 0, 2621453, 3, 0, 2621454, 3, 0, 2621455, 3, 0, 2621456, 3, 0, 2621457, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2621460, 3, 0, 2621461, 3, 0, 2621462, 3, 0, 2621463, 3, 0, 2621464, 0, 0, 2621465, 3, 0, 2621466, 3, 0, 2621467, 3, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 3, 0, 2621471, 3, 0, 2621472, 3, 0, 2621473, 3, 0, 2621474, 6, 0, 2686987, 6, 0, 2686988, 3, 0, 2686989, 3, 0, 2686990, 3, 0, 2686991, 3, 0, 2686992, 3, 0, 2686993, 3, 0, 2686994, 3, 0, 2686995, 3, 0, 2686996, 0, 0, 2686997, 0, 0, 2686998, 0, 0, 2686999, 0, 0, 2687000, 3, 0, 2687001, 3, 0, 2687002, 3, 0, 2687003, 3, 0, 2687004, 3, 0, 2687005, 3, 0, 2687006, 3, 0, 2687007, 3, 0, 2687008, 3, 0, 2687009, 3, 0, 2687010, 6, 0, 2752523, 6, 0, 2752524, 3, 0, 2752525, 3, 0, 2752526, 3, 0, 2752527, 3, 0, 2752528, 3, 0, 2752529, 3, 0, 2752530, 3, 0, 2752531, 3, 0, 2752532, 3, 0, 2752533, 3, 0, 2752534, 3, 0, 2752535, 3, 0, 2752536, 3, 0, 2752537, 3, 0, 2752538, 3, 0, 2752539, 3, 0, 2752540, 3, 0, 2752541, 3, 0, 2752542, 3, 0, 2752543, 3, 0, 2752544, 3, 0, 2752545, 3, 0, 2752546, 6, 0, 2818059, 6, 0, 2818060, 6, 0, 2818061, 6, 0, 2818062, 6, 0, 2818063, 6, 0, 2818064, 6, 0, 2818065, 6, 0, 2818066, 6, 0, 2818067, 6, 0, 2818068, 6, 0, 2818069, 6, 0, 2818070, 6, 0, 2818071, 6, 0, 2818072, 6, 0, 2818073, 6, 0, 2818074, 6, 0, 2818075, 6, 0, 2818076, 6, 0, 2818077, 6, 0, 2818078, 6, 0, 2818079, 6, 0, 2818080, 6, 0, 2818081, 6, 0, 2818082, 6, 0 )

[node name="Dragon" parent="." instance=ExtResource( 3 )]
position = Vector2( 468.069, 157.081 )

[node name="protagonist" parent="." instance=ExtResource( 4 )]
position = Vector2( 466.664, 605.7 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="LavapoolTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
autoplay = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="LavapoolTimer" to="." method="_on_LavapoolTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
